# ezcheck

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  benchmark.py
.github/workflows/: build.yml  sync_repo.yml  syncrepo.yml  test.yml  update_msrv.yml
src/: calculator.rs  extra.rs  lib.rs  main.rs
tests/: .gitattributes  cli_exit_codes.rs  prefixed-shasum.txt  sha256sum.txt
