[package]
name = "ezcheck"
version = "0.1.4"
edition = "2021"
description = "An easy tool to calculate and check hash."
repository = "https://github.com/Metaphorme/ezcheck"
documentation = "https://docs.rs/ezcheck"
readme = "README.md"
authors = ["Heqi Liu 77@diazepam.cc"]
license = "MIT"
rust-version = "1.74.1"

[dependencies]
md2 = { version = "0.10", optional = true }
md4 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
digest = { version = "0.10", optional = true }
ring = { version = "0.17", optional = true }
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["mix_backend"]
hashes_backend = ["md2", "md4", "md-5", "sha1", "sha2", "digest"]
ring_backend = ["ring"]
mix_backend = ["md2", "md4", "md-5", "sha1", "sha2", "digest", "ring"]
